--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.7",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
