--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,15 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
+		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
+		"react-cookie": "^4.1.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"universal-cookie": "^4.0.4",
 		"web-vitals": "^2.1.4"
 	},
-	"proxy": "http://localhost:5000/api/",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -37,5 +39,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"proxy": "http://localhost:5000"
 }
