--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.7",
 		"cookie-parser": "^1.4.6",
