--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
 		"axios": "^0.27.2",
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
+		"react-c": "^0.2.0",
+		"react-calendar": "^3.7.0",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^2.1.3",
+		"styled-components": "^5.3.5",
 		"universal-cookie": "^4.0.4",
 		"web-vitals": "^2.1.4"
 	},
