--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"config": "^3.3.7",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"crypto-js": "^4.1.1",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^4.9.0",
 		"mongoose": "^6.5.2",
+		"node-fetch": "^2.6.1",
 		"nodemon": "^2.0.19"
 	}
 }
