--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
+		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
