--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,16 @@
 # Official node image
-FROM node:17
+FROM node:18
+LABEL version="2.0"
+LABEL description="This is the base docker image for the GIC frontend react app."
+
 # Setting the working directory to "/client"
-WORKDIR /client
+WORKDIR /src/app/client
 
 # Copies the package.json file into "/client" and run npm i
-COPY package.json /client
+COPY ./package.json ./package-lock.json ./
 RUN npm install
 # Copies the entire react source code into "/client"
-COPY . /client
+COPY . .
 
 EXPOSE 3000
 # Starting the react app
