--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,26 @@
 # Version of Docker-compose
 # prettier-ignore
-version: '3.8'
+version: '1.0'
 services:
-  react:
-    build:
-      context: ./client
-      dockerfile: react.dockerfile
-    volumes:
-      - ./client:/client
-      - /client/node_modules
+  server:
+      env_file: '.env'
+      build:
+        context: .
+        dockerfile: Dockerfile
+      ports:
+        - 5000:5000
+      # volumes:
+      #   - nodeVolume:/src/app/server
+  frontend:
+    build: ./client
+    # volumes:
+    #   - ./client:/client
+    #   - /client/node_modules
     ports:
       - 3000:3000
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+    # environment:
+    #   - CHOKIDAR_USEPOLLING=true
     depends_on:
-      - node
-  node:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 5000:5000
-    volumes:
-      - nodeVolume:/server
-volumes:
-  nodeVolume:
+      - server
+# volumes:
+#   nodeVolume:
