--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"antd": "^4.23.2",
 		"axios": "^0.27.2",
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
+		"react-big-calendar": "^1.5.0",
 		"react-c": "^0.2.0",
 		"react-calendar": "^3.7.0",
 		"react-cookie": "^4.1.1",
