--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
 		"react-icons": "^4.4.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^2.1.3",
+		"react-scroll-to-top": "^3.0.0",
 		"styled-components": "^5.3.5",
 		"universal-cookie": "^4.0.4",
 		"web-vitals": "^2.1.4"
