--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^2.1.3",
 		"react-scroll-to-top": "^3.0.0",
+		"react-spinners": "^0.13.5",
 		"styled-components": "^5.3.5",
 		"universal-cookie": "^4.0.4",
 		"web-vitals": "^2.1.4"
