--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -15,6 +18,7 @@
 		"react-calendar": "^3.7.0",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^18.2.0",
+		"react-icon": "^1.0.0",
 		"react-icons": "^4.4.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^2.1.3",
