--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"server": "nodemon server --ignore client",
 		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
+	"engines": {
+		"node": "16.13.0"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
